--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="u8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Johndoe Portfolio Resume Bootstrap Template | Webthemez</title>
+    <title>Oriol Valverde Portfolio Resume| Webthemez</title>
     <meta name="description" content="">
     <meta name="keywords" content="portfolio, agency, bootstrap theme, mobile responsive, template, personal">
     <meta name="author" content="webthemez.com">
@@ -84,7 +84,7 @@
         <div class="overlay"> <!-- Overlay Color -->
             <div class="container"> <!-- container -->
                 <div class="content-heading text-center"> <!-- Input Your Home Content Here -->
-                    <h1>Hi, I am John Doe</br>
+                    <h1>Hi, I am Oriol Valverde and I think that Isaac Gilipollas</br>
                     A Visual and Interaction Designer </h1>
                     <p class="lead">I Love to create beautiful and amazing Websites.</p>
                     <a href="#works" class="scroll goto-btn">Download Resume</a> <!-- Link to your portfolio section -->
