--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         <div class="overlay"> <!-- Overlay Color -->
             <div class="container"> <!-- container -->
                 <div class="content-heading text-center"> <!-- Input Your Home Content Here -->
-                    <h1>Hi, I am Oriol Valverde and I think that Isaac Gilipollas</br>
-                    A Visual and Interaction Designer </h1>
-                    <p class="lead">I Love to create beautiful and amazing Websites.</p>
+                    <h1>Hi, I am Oriol Valverde</br>
+                    A game developer and designer </h1>
+                    <p class="lead">I love to create amazing games.</p>
                     <a href="#works" class="scroll goto-btn">Download Resume</a> <!-- Link to your portfolio section -->
                 </div><!-- End Input Your Home Content Here -->
             </div> <!-- end container -->
@@ -95,18 +95,18 @@
 
     <!-- Intro Section
     ================================================== -->
-    <section id="intro">
-        <div class="container"> <!-- container -->
-            <div class="row"> <!-- row -->
+    <!--<section id="intro">
+        <div class="container">--> <!-- container -->
+            <!--<div class="row">--> <!-- row -->
 
-                <div class="col-md-8 col-md-offset-2"> 
+                <!--<div class="col-md-8 col-md-offset-2"> 
                      <h1>I Love to create beautiful Websites.</h1>
                     <p class="lead">Please go through my Profile.</p>
                 </div>
                 
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </section>
+            </div>--><!-- end row -->
+        <!--</div>--><!-- end container -->
+    <!--</section>-->
 
     <!-- Service Section
     ================================================== -->
