change at about 3

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
 				<img class="img-responsive img-circle img-center" src="img/about.jpg" alt="">
 			</div>
 			<div class="col-sm-6 col-sm-offset-1 scrollimation fade-left in">
-				<h1>Hello, I am John Doe...</h1>
-				<p>I am Jonathan Doe, a 26 year old UI designer/developer from NY. I have graduated with a Bachelor degree of UI Design & Development, from the University of America. I have a passion for creating beautiful designs for a products. I have been awareded for the best designer in March 2015.</p>
+				<h1>Hi, I'm Uri...</h1>
+                <p>I am Oriol, a 22 year old game developer from Barcelona. I have graduated with a Bachelor degree of Video Game Design and Development (CITM-UPC). As an aspiring game developer with high ambitions in the video game industry, I find great pleasure in collaborating with others. I am also keenly interested in expanding my knowledge about the software tools I regularly utilize.</p>
 				
 			</div>
 		</div><!--End row -->
