--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <li><a href="#whatIdo" class="scroll">What I Do</a></li>
                 <li><a href="#about" class="scroll">About</a></li>
                 <li><a href="#works" class="scroll">Works</a></li>
-                <li><a href="#experience" class="scroll">Experience</a></li> 
+                <!--<li><a href="#experience" class="scroll">Experience</a></li>--> 
                 <li><a href="#contact" class="scroll">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
@@ -440,23 +440,23 @@
 
     <!-- experience Section
     ================================================== -->
-    <section id="experience">
-        <div class="container"> <!-- container -->
-            <div class="section-header">
+    <!--<section id="experience">
+        <div class="container">--> <!-- container -->
+            <!--<div class="section-header">
                 <h2>My Experience</h2>
                 <h5><em>Lorem Ipsum is simply dummy text of the printing and typesetting industry</em></h5>
                 <div class="fancy"><span></span></div>
             </div>
-        </div><!-- end container -->
+        </div>--><!-- end container -->
 
-        <div class="gray-bg"> <!-- fullwidth gray background -->
-            <div class="container"><!-- container --> 
-                <div id="experience" class="row"> <!-- row -->
+        <!--<div class="gray-bg">--> <!-- fullwidth gray background -->
+            <!--<div class="container">--><!-- container --> 
+                <!--<div id="experience" class="row">--> <!-- row -->
 
-                    <div class="col-md-10 col-md-offset-1">
+                    <!--<div class="col-md-10 col-md-offset-1">
 
-                        <div class="media experience"> <!-- experience #1 -->
-                            <div class="media-right media-middle">
+                        <div class="media experience">--> <!-- experience #1 -->
+                            <!--<div class="media-right media-middle">
                                 <i class="fa fa-facebook"></i>
                             </div>
                             <div class="media-body">
@@ -464,10 +464,10 @@
 								<h5>2011 to Present</h5>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry, sem auctor, molestie diam dictum aliquam. Dolor leo, ridiculus est ut cubilia nec, fermentum arcu praesent, pede etiam. Tempor vestibulum turpis id ligula mi mattis. Eget arcu vitae mauris amet odio.</p>
                             </div>
-                        </div><!-- experience #1 -->
+                        </div>--><!-- experience #1 -->
 
-                        <div class="media experience"> <!-- experience #2 -->
-                            <div class="media-right media-middle">
+                        <!--<div class="media experience">--> <!-- experience #2 -->
+                            <!--<div class="media-right media-middle">
                                 <i class="fa fa-google-plus"></i>
                             </div>
                             <div class="media-body">
@@ -475,10 +475,10 @@
 								<h5>2007 to 2011</h5>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry, sem auctor, molestie diam dictum aliquam. Dolor leo, ridiculus est ut cubilia nec, fermentum arcu praesent, pede etiam. Tempor vestibulum turpis id ligula mi mattis. Eget arcu vitae mauris amet odio.</p>
                             </div>
-                        </div><!-- experience #2 -->
+                        </div>--><!-- experience #2 -->
 
-                        <div class="media experience"> <!-- experience #3 -->
-                            <div class="media-right media-middle">
+                        <!--<div class="media experience">--> <!-- experience #3 -->
+                            <!--<div class="media-right media-middle">
                                 <i class="fa fa-yahoo"></i>
                             </div>
                             <div class="media-body">
@@ -486,10 +486,10 @@
 								<h5>2004 to 2007</h5>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry, sem auctor, molestie diam dictum aliquam. Dolor leo, ridiculus est ut cubilia nec, fermentum arcu praesent, pede etiam. Tempor vestibulum turpis id ligula mi mattis. Eget arcu vitae mauris amet odio.</p>
                             </div>
-                        </div><!-- experience #3 -->
+                        </div>--><!-- experience #3 -->
 
-                        <div class="media experience"> <!-- experience #4 -->
-                            <div class="media-right media-middle">
+                        <!--<div class="media experience">--> <!-- experience #4 -->
+                            <!--<div class="media-right media-middle">
                                 <i class="fa fa-linkedin"></i>
                             </div>
                             <div class="media-body">
@@ -497,14 +497,14 @@
 								<h5>2001 to 2004</h5>
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry, sem auctor, molestie diam dictum aliquam. Dolor leo, ridiculus est ut cubilia nec, fermentum arcu praesent, pede etiam. Tempor vestibulum turpis id ligula mi mattis. Eget arcu vitae mauris amet odio.</p>
                             </div>
-                        </div><!-- experience #4 -->
+                        </div>--><!-- experience #4 -->
                         
-                    </div>
+                    <!--</div>
 
-                </div> <!-- end row -->
-            </div><!-- end container -->
-        </div>  <!-- end fullwidth gray background -->
-    </section>
+                </div>--> <!-- end row -->
+            <!--</div>--><!-- end container -->
+        <!--</div>-->  <!-- end fullwidth gray background -->
+    <!--</section>-->
 
     
     <!-- Contact Section
