change i don't know

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="container"> <!-- container -->
                 <div class="content-heading text-center"> <!-- Input Your Home Content Here -->
                     <h1>Hi, I am Oriol Valverde</br>
-                    A game developer and designer </h1>
+                    A game developer and game designer </h1>
                     <p class="lead">I love to create amazing games.</p>
                     <a href="#works" class="scroll goto-btn">Download Resume</a> <!-- Link to your portfolio section -->
                 </div><!-- End Input Your Home Content Here -->
@@ -514,7 +514,7 @@
         <div class="container"> <!-- container -->
             <div class="section-header">
                 <h2>Keep In Touch With ME</h2>
-                <h5><em>Lorem Ipsum is simply dummy text of the printing and typesetting industry</em></h5>
+                <h5><em>Thank you for visiting my portfolio. If you have any questions please do not hesitate to contact me.</em></h5>
                 <div class="fancy"><span></span></div>
             </div>
         </div><!-- end container -->
@@ -525,25 +525,10 @@
                     <div class="row"> <!-- nested row -->
 
                         <!-- contact detail using col 4 -->
-                        <div class="col-md-4">  
-                            <div class="contact-detail">
-                                <i class="fa fa-map-marker"></i>
-                                <h4>#150-25, James Street, NewYork</h4> <!-- address -->
-                            </div>
-                        </div>
-                        <!-- contact detail using col 4 -->
                         <div class="col-md-4">
                             <div class="contact-detail">
                                 <i class="fa fa-envelope-o"></i>
-                                <h4>johndoe@gmail.com</h4><!-- email add -->
-                            </div>
-                        </div>
-
-                        <!-- contact detail using col 4 -->
-                        <div class="col-md-4">
-                            <div class="contact-detail">
-                                <i class="fa fa-phone"></i>
-                                <h4>+123 4567 8912</h4> <!-- phone no. -->
+                                <h4>valverdeoriol@gmail.com</h4><!-- email add -->
                             </div>
                         </div>
 
