--- a/index.html
+++ b/index.html
@@ -522,63 +522,66 @@
         <div class="container"><!-- container -->
             <div class="row"> <!-- outer row -->
                 <div class="col-md-10 col-md-offset-1"> <!-- col 10 with offset 1 to centered -->
-                    <div class="row"> <!-- nested row -->
-
+                    <div class="row">
+                        <!-- nested row -->
                         <!-- contact detail using col 4 -->
-                        <div class="col-md-4">
-                            <div class="contact-detail">
-                                <i class="fa fa-envelope-o"></i>
-                                <h4>valverdeoriol@gmail.com</h4><!-- email add -->
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="contact-detail text-center">
+                                    <i class="fa fa-envelope-o"></i>
+                                    <h4>valverdeoriol@gmail.com</h4>
+                                </div>
                             </div>
                         </div>
+
 
                     </div> <!-- end nested row -->
                 </div> <!-- end col 10 with offset 1 to centered -->
             </div><!-- end outer row -->
 
-            <div class="row text-center"> <!-- contact form outer row with centered text-->
-                <div class="col-md-10 col-md-offset-1"> <!-- col 10 with offset 1 to centered -->
-                    <form id="contact-form" class="form" name="sentMessage" novalidate> <!-- form wrapper -->
+            <!--<div class="row text-center">--> <!-- contact form outer row with centered text-->
+                <!--<div class="col-md-10 col-md-offset-1">--> <!-- col 10 with offset 1 to centered -->
+                    <!--<form id="contact-form" class="form" name="sentMessage" novalidate>--> <!-- form wrapper -->
 
-                        <div class="row"> <!-- nested inner row -->
+                        <!--<div class="row">--> <!-- nested inner row -->
 
                             <!-- Input your name -->
-                            <div class="col-md-4">
-                                <div class="form-group"> <!-- Your name input -->
-                                    <input type="text" autocomplete="off" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                            <!--<div class="col-md-4">
+                                <div class="form-group">--> <!-- Your name input -->
+                                    <!--<input type="text" autocomplete="off" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
                                 </div>
-                            </div>
+                            </div>-->
 
                             <!-- Input your email -->
-                            <div class="col-md-4">
-                                <div class="form-group"> <!-- Your email input -->
-                                    <input type="email" autocomplete="off" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                            <!--<div class="col-md-4">
+                                <div class="form-group">--> <!-- Your email input -->
+                                    <!--<input type="email" autocomplete="off" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
-                            </div>
+                            </div>-->
 
                             <!-- Input your Phone no. -->
-                            <div class="col-md-4">
-                                <div class="form-group"> <!-- Your email input -->
-                                    <input type="text" autocomplete="off" class="form-control" placeholder="Your Phone No. *" id="phone" required data-validation-required-message="Please enter your phone no.">
+                            <!--<div class="col-md-4">
+                                <div class="form-group">--> <!-- Your email input -->
+                                    <!--<input type="text" autocomplete="off" class="form-control" placeholder="Your Phone No. *" id="phone" required data-validation-required-message="Please enter your phone no.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
 
-                        </div><!-- end nested inner row -->
+                        </div>--><!-- end nested inner row -->
 
                         <!-- Message Text area -->
-                        <div class="form-group"> <!-- Your email input -->
-                            <textarea class="form-control" rows="7" placeholder="Tell Us Something..." id="message" required data-validation-required-message="Please enter a message."></textarea>
+                        <!--<div class="form-group">--> <!-- Your email input -->
+                            <!--<textarea class="form-control" rows="7" placeholder="Tell Us Something..." id="message" required data-validation-required-message="Please enter a message."></textarea>
                             <p class="help-block text-danger"></p>
                             <div id="success"></div>
                         </div>
-                        <button type="submit" class="btn btn-primary btn color">Send Message</button> <!-- Send button -->
+                        <button type="submit" class="btn btn-primary btn color">Send Message</button>--> <!-- Send button -->
 
-                    </form><!-- end form wrapper -->
-                </div><!-- end col 10 with offset 1 to centered -->
-            </div> <!-- end contact form outer row with centered text-->
+                    <!--</form>--><!-- end form wrapper -->
+                <!--</div>--><!-- end col 10 with offset 1 to centered -->
+            <!--</div>--> <!-- end contact form outer row with centered text-->
 
         </div><!-- end container -->
 
