--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h1>Hi, I am Oriol Valverde</br>
                     A game developer and game designer </h1>
                     <p class="lead">I love to create amazing games.</p>
-                    <a href="#works" class="scroll goto-btn">Download Resume</a> <!-- Link to your portfolio section -->
+                    <a href="Oriol Valverde CV" download class="scroll goto-btn">Download Resume</a> <!-- Link to your portfolio section -->
                 </div><!-- End Input Your Home Content Here -->
             </div> <!-- end container -->
         </div><!-- End Overlay Color -->
