--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h1>Hi, I am Oriol Valverde</br>
                     A game developer and game designer </h1>
                     <p class="lead">I love to create amazing games.</p>
-                    <a href="Oriol Valverde CV" download class="scroll goto-btn">Download Resume</a> <!-- Link to your portfolio section -->
+                    <a href="#works" class="scroll goto-btn">Download Resume</a> <!-- Link to your portfolio section -->
                 </div><!-- End Input Your Home Content Here -->
             </div> <!-- end container -->
         </div><!-- End Overlay Color -->
@@ -325,7 +325,7 @@
                     <div class="box"> 
                         <div class="hover-bg">
                             <div class="hover-text off">
-                                <a title="Logo Identity Design" href="img/portfolio/01.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/01.jpg">
+                                <a title="Pol maricon" href="img/portfolio/01.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/01.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
                                 <a href="#"><i class="fa fa-chain"></i></a> <!-- change # with your url to link it to another page -->
