--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                     <div class="box"> 
                         <div class="hover-bg">
                             <div class="hover-text off">
-                                <a title="Pol maricon" href="img/portfolio/01.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/01.jpg">
+                                <a title="Lights Out" href="img/portfolio/01.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/01.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
                                 <a href="#"><i class="fa fa-chain"></i></a> <!-- change # with your url to link it to another page -->
