--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
-                                <a title="Mobile Application" href="img/portfolio/02.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/02.jpg">
-                                    <i class="fa fa-expand"></i>
+                                <a title="Virtual reality blockout creation app" href="img/portfolio/02.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/02.jpg">
+                                    <i class="fa fa-expand"></i>DD
                                 </a>
                                 <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                             </div>
@@ -353,7 +353,7 @@
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
-                                <a title="Freedom Project #1" href="img/portfolio/03.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/03.jpg">
+                                <a title="Caronte Mandate" href="img/portfolio/03.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/03.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
                                 <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
@@ -367,7 +367,7 @@
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
-                                <a title="Freedom Project #1" href="img/portfolio/04.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/04.jpg">
+                                <a title="Caronte Mandate 2" href="img/portfolio/04.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/04.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
                                 <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
@@ -381,7 +381,7 @@
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
-                                <a title="Freedom Project #1" href="img/portfolio/05.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/05.jpg">
+                                <a title="Dune: Fremen's Rising'" href="img/portfolio/05.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/05.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
                                 <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
@@ -395,7 +395,7 @@
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
-                                <a title="Freedom Project #1" href="img/portfolio/06.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/06.jpg">
+                                <a title="HiveMind Engine" href="img/portfolio/06.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/06.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
                                 <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
@@ -409,7 +409,7 @@
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
-                                <a title="Freedom Project #1" href="img/portfolio/07.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/07.jpg">
+                                <a title="Ragnar Engine" href="img/portfolio/07.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/07.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
                                 <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
