--- a/index.html
+++ b/index.html
@@ -309,10 +309,8 @@
             <div class="text-center">
                 <ul class="list-inline cat"> <!-- Portfolio Filter Categories -->
                     <li><a href="#" data-filter="*" class="active">All</a></li>
-                    <li><a href="#" data-filter=".brand">Design</a></li>
-                    <li><a href="#" data-filter=".web">Web</a></li>
-                    <li><a href="#" data-filter=".app">Apps</a></li>
-                    <li><a href="#" data-filter=".others">Others</a></li>
+                    <li><a href="#" data-filter=".games">Games</a></li>
+                    <li><a href="#" data-filter=".engine">Engine</a></li>
                 </ul><!-- End Portfolio Filter Categories -->
             </div>
 
@@ -321,7 +319,7 @@
         <div class="container-fluid"> <!-- fluid container -->
              <div id="itemsWork" class="row text-center"> <!-- Portfolio Wrapper Row -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding brand others"> <!-- Works #1 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding games others"> <!-- Works #1 col 3 -->
                     <div class="box"> 
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -335,7 +333,7 @@
                     </div>
                 </div><!-- end Works #1 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding apps"> <!-- Works #2 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding engine"> <!-- Works #2 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -349,7 +347,7 @@
                     </div>
                 </div><!-- end Works #2 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding others brand"><!-- Works #3 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding others games"><!-- Works #3 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -363,7 +361,7 @@
                     </div>
                 </div><!-- end Works #3 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding others web"> <!-- Works #4 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding others games"> <!-- Works #4 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -377,7 +375,7 @@
                     </div>
                 </div> <!-- end Works #4 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding web others"> <!-- Works #5 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding games others"> <!-- Works #5 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -391,7 +389,7 @@
                     </div>
                 </div> <!-- end Works #5 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding app">  <!-- Works #6 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine">  <!-- Works #6 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -405,7 +403,7 @@
                     </div>
                 </div><!-- end Works #6 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding web brand"><!-- Works #7 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine brand"><!-- Works #7 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -418,21 +416,6 @@
                         </div>
                     </div>
                 </div><!-- end Works #7 col 3 -->
-
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding app"> <!-- Works #8 col 3 -->
-                    <div class="box"> 
-                        <div class="hover-bg">
-                            <div class="hover-text off">
-                                <a title="Freedom Project #1" href="img/portfolio/08.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/08.jpg">
-                                    <i class="fa fa-expand"></i>
-                                </a>
-                                <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
-                            </div>
-                            <img src="img/portfolio/08.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
-                        </div> 
-                    </div>
-                </div> <!-- end Works #8 col 3 -->
-                
             </div> <!-- End Row -->
 
         </div> <!-- End Container-Fluid -->
