--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
                         </div>
                     </div>
                 </div> <!-- end Works #5 col 3 -->
-            
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine brand"><!-- Works #6 col 3 -->
+
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine">  <!-- Works #6 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -398,13 +398,13 @@
                                 </a>
                                 <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                             </div>
-                            <img src="img/portfolio/07.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
+                            <img src="img/portfolio/06.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
                     </div>
                 </div><!-- end Works #6 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding app"> <!-- Works #7 col 3 -->
-                    <div class="box"> 
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine brand"><!-- Works #7 col 3 -->
+                    <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
                                 <a title="Ragnar Engine" href="img/portfolio/07.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/07.jpg">
@@ -413,9 +413,23 @@
                                 <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                             </div>
                             <img src="img/portfolio/07.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
+                        </div>
+                    </div>
+                </div><!-- end Works #7 col 3 -->
+
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding app"> <!-- Works #8 col 3 -->
+                    <div class="box"> 
+                        <div class="hover-bg">
+                            <div class="hover-text off">
+                                <a title="Freedom Project #1" href="img/portfolio/08.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/08.jpg">
+                                    <i class="fa fa-expand"></i>
+                                </a>
+                                <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
+                            </div>
+                            <img src="img/portfolio/08.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div> 
                     </div>
-                </div> <!-- end Works #7 col 3 -->
+                </div> <!-- end Works #8 col 3 -->
                 
             </div> <!-- End Row -->
 
