--- a/index.html
+++ b/index.html
@@ -403,21 +403,21 @@
                     </div>
                 </div><!-- end Works #6 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine brand"><!-- Works #7 col 3 -->
-                    <div class="box">
+                <!--<div class="col-xs-12 col-sm-6 col-md-3 nopadding engine engine">--><!-- Works #7 col 3 -->
+                    <!--<div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
                                 <a title="Ragnar Engine" href="img/portfolio/07.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/07.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
-                                <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
-                            </div>
-                            <img src="img/portfolio/07.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
-                        </div>
+                                <a href="#"><i class="fa fa-chain"></i></a>--><!-- change # with your url to link it to another page -->
+                            <!--</div>
+                            <img src="img/portfolio/07.jpg" class="img-responsive" alt="Image">--> <!-- Portfolio Image -->
+                        <!--</div>
                     </div>
-                </div><!-- end Works #7 col 3 -->
+                </div>--><!-- end Works #7 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding app"> <!-- Works #8 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine"> <!-- Works #8 col 3 -->
                     <div class="box"> 
                         <div class="hover-bg">
                             <div class="hover-text off">
