--- a/index.html
+++ b/index.html
@@ -317,23 +317,26 @@
         </div><!-- End Container -->
 
         <div class="container-fluid"> <!-- fluid container -->
-             <div id="itemsWork" class="row text-center"> <!-- Portfolio Wrapper Row -->
+            <div id="itemsWork" class="row text-center">
+                <!-- Portfolio Wrapper Row -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding games others"> <!-- Works #1 col 3 -->
-                    <div class="box"> 
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding games others">
+                    <!-- Works #1 col 3 -->
+                    <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
                                 <a title="Lights Out" href="img/portfolio/01.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/01.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
                                 <a href="#"><i class="fa fa-chain"></i></a> <!-- change # with your url to link it to another page -->
-                            </div> 
+                            </div>
                             <img src="img/portfolio/01.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
                     </div>
                 </div><!-- end Works #1 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding engine"> <!-- Works #2 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding engine">
+                    <!-- Works #2 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -347,7 +350,8 @@
                     </div>
                 </div><!-- end Works #2 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding others games"><!-- Works #3 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding others games">
+                    <!-- Works #3 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -361,7 +365,8 @@
                     </div>
                 </div><!-- end Works #3 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding others games"> <!-- Works #4 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding others games">
+                    <!-- Works #4 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -375,7 +380,8 @@
                     </div>
                 </div> <!-- end Works #4 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding games others"> <!-- Works #5 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding games others">
+                    <!-- Works #5 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -389,7 +395,8 @@
                     </div>
                 </div> <!-- end Works #5 col 3 -->
 
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine">  <!-- Works #6 col 3 -->
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine">
+                    <!-- Works #6 col 3 -->
                     <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
@@ -402,23 +409,10 @@
                         </div>
                     </div>
                 </div><!-- end Works #6 col 3 -->
-
-                <!--<div class="col-xs-12 col-sm-6 col-md-3 nopadding engine engine">--><!-- Works #7 col 3 -->
-                    <!--<div class="box">
-                        <div class="hover-bg">
-                            <div class="hover-text off">
-                                <a title="Ragnar Engine" href="img/portfolio/07.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/07.jpg">
-                                    <i class="fa fa-expand"></i>
-                                </a>
-                                <a href="#"><i class="fa fa-chain"></i></a>--><!-- change # with your url to link it to another page -->
-                            <!--</div>
-                            <img src="img/portfolio/07.jpg" class="img-responsive" alt="Image">--> <!-- Portfolio Image -->
-                        <!--</div>
-                    </div>
-                </div>--><!-- end Works #7 col 3 -->
-
-                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine"> <!-- Works #8 col 3 -->
-                    <div class="box"> 
+                
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine">
+                    <!-- Works #7 col 3 -->
+                    <div class="box">
                         <div class="hover-bg">
                             <div class="hover-text off">
                                 <a title="HiveMind Engine" href="img/portfolio/06.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/06.jpg">
@@ -427,10 +421,25 @@
                                 <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                             </div>
                             <img src="img/portfolio/06.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
-                        </div> 
+                        </div>
                     </div>
-                </div> <!-- end Works #8 col 3 -->
-                
+                </div><!-- end Works #7 col 3 -->
+
+                <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine">
+                    <!-- Works #8 col 3 -->
+                    <div class="box">
+                        <div class="hover-bg">
+                            <div class="hover-text off">
+                                <a title="Shader Engine" href="img/portfolio/08.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/08.jpg">
+                                    <i class="fa fa-expand"></i>
+                                </a>
+                                <a href="https://github.com/Makinilla-maker/ShaderEngine"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
+                            </div>
+                            <img src="img/portfolio/08.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
+                        </div>
+                    </div>
+                </div>
+
             </div> <!-- End Row -->
 
         </div> <!-- End Container-Fluid -->
