--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                 <a title="Lights Out" href="img/portfolio/01.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/01.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
-                                <a href="#"><i class="fa fa-chain"></i></a> <!-- change # with your url to link it to another page -->
+                                <a href="https://osvak.itch.io/lights-out"><i class="fa fa-chain"></i></a> <!-- change # with your url to link it to another page -->
                             </div>
                             <img src="img/portfolio/01.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
@@ -343,7 +343,7 @@
                                 <a title="Virtual reality blockout creation app" href="img/portfolio/02.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/02.jpg">
                                     <i class="fa fa-expand"></i>DD
                                 </a>
-                                <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
+                                <a href="https://github.com/Makinilla-maker/Virtual-reality-blockout-creation-app"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                             </div>
                             <img src="img/portfolio/02.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
@@ -358,7 +358,7 @@
                                 <a title="Caronte Mandate" href="img/portfolio/03.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/03.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
-                                <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
+                                <a href="https://kuronoascarlet.github.io/ProjectII/"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                             </div>
                             <img src="img/portfolio/03.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
@@ -373,7 +373,7 @@
                                 <a title="Caronte Mandate 2" href="img/portfolio/04.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/04.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
-                                <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
+                                <a href="https://github.com/Makinilla-maker/VrGame"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                             </div>
                             <img src="img/portfolio/04.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
@@ -388,7 +388,7 @@
                                 <a title="Dune: Fremen's Rising'" href="img/portfolio/05.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/05.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
-                                <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
+                                <a href="https://dune-fermen-s-rising-web.vercel.app/#game"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                             </div>
                             <img src="img/portfolio/05.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
@@ -403,7 +403,7 @@
                                 <a title="Ragnar Engine" href="img/portfolio/07.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/07.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
-                                <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
+                                <a href="https://github.com/Denisdrk6/Dune-Fremen-s-Rising"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                             </div>
                             <img src="img/portfolio/07.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
@@ -418,7 +418,7 @@
                                 <a title="HiveMind Engine" href="img/portfolio/06.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/06.jpg">
                                     <i class="fa fa-expand"></i>
                                 </a>
-                                <a href="#"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
+                                <a href="https://github.com/MHF13/HiveMindEngine"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                             </div>
                             <img src="img/portfolio/06.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
