--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				  
                     <div class="media service"> <!-- Service #4 -->
                         <div class="media-left media-middle">
-                            <i class="fa fa-star"></i>
+                            <i class="fa fa-code"></i>
                         </div>
                         <div class="media-body">
                             <h4 class="media-heading">Gameplay programmer</h4>
@@ -139,7 +139,7 @@
 
                     <div class="media service"> <!-- Service #5 -->
                         <div class="media-left media-middle">
-                            <i class="fa fa-android"></i>
+                            <i class="fa fa-desktop"></i>
                         </div>
                         <div class="media-body">
                             <h4 class="media-heading">Game Designer</h4>
@@ -149,7 +149,7 @@
 
                     <div class="media service"> <!-- Service #6 -->
                         <div class="media-left media-middle">
-                            <i class="fa fa-apple"></i>
+                            <i class="fa fa-cubes"></i>
                         </div>
                         <div class="media-body">
                             <h4 class="media-heading">Engine programmer</h4>
