--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>My Works</h2>
-                <h5><em>Lorem Ipsum is simply dummy text of the printing and typesetting industry</em></h5>
+                <h5><em>Here will be presented the works in which I have participated and new ones will be uploaded.</em></h5>
                 <div class="fancy"><span></span></div>
             </div>
 
