--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
                       <li><a href="#" data-filter="*" class="active">All</a></li>
                       <li><a href="#" data-filter=".games">Games</a></li>
                       <li><a href="#" data-filter=".engine">Engine</a></li>
+                      <li><a href="#" data-filter=".design">Design</a></li>
                   </ul><!-- End Portfolio Filter Categories -->
               </div>
 
@@ -335,7 +336,7 @@
 
           <div class="container-fluid">
               <!-- fluid container -->
-              <div id="itemsWork" class="row text-center">
+              <div id="itemsWork" class="row text-center">º
                   <!-- Portfolio Wrapper Row -->
 
                   <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding games others">
