--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@
 
           <div class="container-fluid">
               <!-- fluid container -->
-              <div id="itemsWork" class="row text-center">º
+              <div id="itemsWork" class="row text-center">
+                  º
                   <!-- Portfolio Wrapper Row -->
 
                   <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nopadding games others">
@@ -360,7 +361,7 @@
                           <div class="hover-bg">
                               <div class="hover-text off">
                                   <a title="Virtual reality blockout creation app" href="img/portfolio/02.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/02.jpg">
-                                      <i class="fa fa-expand"></i>DD
+                                      <i class="fa fa-expand"></i>
                                   </a>
                                   <a href="https://github.com/Makinilla-maker/Virtual-reality-blockout-creation-app"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                               </div>
@@ -443,6 +444,21 @@
                           </div>
                       </div>
                   </div><!-- end Works #7 col 3 -->
+
+                  <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine">
+                      <!-- Works #8 col 3 -->
+                      <div class="box">
+                          <div class="hover-bg">
+                              <div class="hover-text off">
+                                  <a title="Shader Engine" href="img/portfolio/08.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/08.jpg">
+                                      <i class="fa fa-expand"></i>
+                                  </a>
+                                  <a href="https://github.com/Makinilla-maker/ShaderEngine"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
+                              </div>
+                              <img src="img/portfolio/08.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
+                          </div>
+                      </div>
+                  </div>
 
                   <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine">
                       <!-- Works #8 col 3 -->
