--- a/index.html
+++ b/index.html
@@ -460,17 +460,17 @@
                       </div>
                   </div>
 
-                  <div class="col-xs-12 col-sm-6 col-md-3 nopadding engine">
+                  <div class="col-xs-12 col-sm-6 col-md-3 nopadding design">
                       <!-- Works #8 col 3 -->
                       <div class="box">
                           <div class="hover-bg">
                               <div class="hover-text off">
-                                  <a title="Shader Engine" href="img/portfolio/08.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/08.jpg">
+                                  <a title="CITM zombis" href="img/portfolio/09.jpg" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/09.jpg">
                                       <i class="fa fa-expand"></i>
                                   </a>
-                                  <a href="https://github.com/Makinilla-maker/ShaderEngine"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
+                                  <a href="https://www.youtube.com/watch?v=MqMS1MhRoHs"><i class="fa fa-chain"></i></a><!-- change # with your url to link it to another page -->
                               </div>
-                              <img src="img/portfolio/08.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
+                              <img src="img/portfolio/09.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                           </div>
                       </div>
                   </div>
